<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>sebuilder-interpreter</artifactId>
    <groupId>com.saucelabs</groupId>
    <version>1.0.5</version>
    <packaging>jar</packaging>
    <name>sebuilder-interpreter</name>
    <licenses>
           <license>
               <name>The Apache Software License, Version 2.0</name>
               <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
               <distribution>repo</distribution>
           </license>
       </licenses>
       <organization>
           <name>Sauce Labs</name>
           <url>http://www.saucelabs.com/</url>
       </organization>
       <developers>
           <developer>
               <organization>Sauce Labs</organization>
               <organizationUrl>http://www.saucelabs.com/</organizationUrl>
           </developer>
       </developers>

    <scm>
        <connection>scm:git:git://github.com/rossrowe/se-builder.git</connection>
        <developerConnection>scm:git:git@github.com:rossrowe/se-builder.git</developerConnection>
        <url>git@github.com:rossrowe/se-builder.git</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>cloudbees-private-release-repository</id>
            <url>dav:https://repository-saucelabs.forge.cloudbees.com/release</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant-junit</artifactId>
            <version>1.10.3</version>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.0.4</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20080701</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.11.0</version>
        </dependency>
        <dependency>
            <groupId>ru.yandex.qatools.ashot</groupId>
            <artifactId>ashot</artifactId>
            <version>1.5.4</version>
        </dependency>
        <dependency>
        	  <groupId>net.sf.opencsv</groupId>
        	  <artifactId>opencsv</artifactId>
        	  <version>2.3</version>
        </dependency>
    </dependencies>

    <build>
		<sourceDirectory>${basedir}/src</sourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18</version>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                </configuration>
            </plugin>
            <!-- Package source to JAR to upload to repo-->
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <!-- Restrict execution of source compilation to install or deploy. -->
                        <!-- The default is package. -->
                        <phase>install</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
             </plugin>
             <!-- Package JavaDocs to JAR to upload to repo -->
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <!-- Restrict execution of source compilation to install -->
                        <phase>install</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
             </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/log4j.properties</exclude>
                    </excludes>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.sebuilder.interpreter.SeInterpreter</mainClass>
                            <classpathPrefix>dependency-jars/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.jolira</groupId>
                <artifactId>onejar-maven-plugin</artifactId>
                <version>1.4.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>one-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
